# dblp-analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 01_data_ingestion.ipynb  02_eda_basic.ipynb  04_recommendation.ipynb  05_rag_layer.ipynb
src/: clustering.py  embeddings.py  network.py  parser.py  preprocessing.py  rag.py  recommender.py
